tests/ui/macro_not_on_struct.stderr
error: expected `struct`
 --> tests/ui/macro_not_on_struct.rs:4:1
  |
4 | fn main() {
  | ^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/macro_not_on_struct.rs:5:2
  |
5 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/macro_not_on_struct.rs`
