tests/ui/macro_not_on_struct.rs
use dst_factory::make_dst_factory;

#[make_dst_factory]
fn main() {
}
